


v0.10 (β) - 2016-xx-xx
======================
- Cleanup unused static files (#47).
- Investigated mysql_tzinfo_to_sql — Load the Time Zone Tables (#35).
- Make additional DSMR data optional (#46).


v0.9 (β) - 2016-02-08
=====================
- Moved project to GitHub (#28).
- Added stdout to dsmr_backend to reflect progress.
- Restore note usage in GUI (#39).


v0.8 (β) - 2016-02-06
=====================
- Store daily, weekly, monthly and yearly statistics (Issue #3).
- Improved Recent History page performance a bit. (as result of #3)
- Updates ChartJS library tot 1.1, disposing django-chartjs plugin. Labels finally work! (as result of #3)
- Added trends page. (as result of #3)



v0.7 (β) - 2016-02-04
=====================
- Recent history setting: set range (Issue #29).
- Mock required for test: dsmr_weather.test_weather_tracking (Issue #32).



v0.6 (β) - 2016-02-03
=====================
- Massive refactoring: Separating apps & using signals (Issue #19).
- README update: Exit character for cu (Issue #27, by Jeroen Peters).
- Fixed untranslated strings in admin interface.
- Upgraded Django to 1.8.9.



v0.5 (β) - 2016-01-16
=====================
- First stable release.