@@ -12,9 +12,10 @@ https://docs.djangoproject.com/en/1.8/ref/settings/
 
 # Build paths inside the project like this: os.path.join(BASE_DIR, ...)
 import os
-import pytz
 
 from django.utils.translation import ugettext_lazy as _
+
+from .dsmr import *  # Project specific non-Django settings.
 
 
 BASE_DIR = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
@@ -113,8 +114,15 @@ USE_L10N = True
 
 USE_TZ = True
 
-# Caching framework. Normally we should prefer memcached,
-# but file-based cache is fine (and still fast) for RaspberryPi, preserving memory.
+# Localization.
+# https://docs.djangoproject.com/en/1.8/topics/i18n/formatting/
+FORMAT_MODULE_PATH = [
+    'dsmrreader.formats'
+]
+USE_THOUSAND_SEPARATOR = True
+
+# Caching framework. Normally we should prefer memcached, but file-based cache
+# is fine (and still fast) for RaspberryPi, preserving memory usage.
 CACHES = {
     'default': {
         'BACKEND': 'django.core.cache.backends.filebased.FileBasedCache',
@@ -125,9 +133,6 @@ CACHES = {
         }
     }
 }
-
-# Local timezone to maintain for GUI. (<> TIME_ZONE!)
-LOCAL_TIME_ZONE = pytz.timezone('CET')
 
 # Static files (CSS, JavaScript, Images)
 # https://docs.djangoproject.com/en/1.8/howto/static-files/
@@ -140,6 +145,3 @@ LANGUAGES = (
 )
 
 LOCALE_PATHS = (os.path.join(BASE_DIR, 'locales'), )
-
-# DSMR Project.
-DSMR_SUPPORTED_DB_VENDORS = ('postgresql', 'mysql')
