@@ -1,0 +1,3 @@
+DSMR_GRAPH_SHORT_DATETIME_FORMAT = 'l, P'
+DSMR_GRAPH_SHORT_DATE_FORMAT = 'D N jS'
+DSMR_GRAPH_LONG_DATE_FORMAT = 'l F jS, Y'
