@@ -1,0 +1,3 @@
+DSMR_GRAPH_SHORT_DATETIME_FORMAT = 'l G:i'
+DSMR_GRAPH_SHORT_DATE_FORMAT = 'D j b'
+DSMR_GRAPH_LONG_DATE_FORMAT = 'l j F Y'
